--- a/config/yugabyte/regression_pipelines/vector_workloads/postgres/delete_512d_single_indexed.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/postgres/delete_512d_single_indexed.yaml
@@ -25,6 +25,7 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
+            - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_delete_512d_indexed;
             - CREATE TABLE vector_delete_512d_indexed (id bigint PRIMARY KEY, embedding vector(512));
             - CREATE INDEX ON vector_delete_512d_indexed USING hnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
