--- a/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/search_512d_100k_cosine_nofilter.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/search_512d_100k_cosine_nofilter.yaml
@@ -25,6 +25,7 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
+            - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_search_512d_100k_cosine;
             - CREATE TABLE vector_search_512d_100k_cosine (id bigint PRIMARY KEY, embedding vector(512), metadata text, category int);
             - CREATE INDEX ON vector_search_512d_100k_cosine USING ybhnsw (embedding vector_cosine_ops) WITH (m=16, ef_construction=200);
