--- a/config/yugabyte/regression_pipelines/vector_workloads/yb_colocated/update_512d_embedding_cosine_indexed.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/yb_colocated/update_512d_embedding_cosine_indexed.yaml
@@ -25,6 +25,7 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
+            - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_update_512d_cosine_indexed;
             - CREATE TABLE vector_update_512d_cosine_indexed (id bigint PRIMARY KEY, embedding vector(512));
             - CREATE INDEX ON vector_update_512d_cosine_indexed USING ybhnsw (embedding vector_cosine_ops) WITH (m=16, ef_construction=200);
