--- a/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/update_512d_embedding_ip_indexed.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/update_512d_embedding_ip_indexed.yaml
@@ -25,6 +25,7 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
+            - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_update_512d_ip_indexed;
             - CREATE TABLE vector_update_512d_ip_indexed (id bigint PRIMARY KEY, embedding vector(512));
             - CREATE INDEX ON vector_update_512d_ip_indexed USING ybhnsw (embedding vector_ip_ops) WITH (m=16, ef_construction=200);
