--- a/config/yugabyte/regression_pipelines/vector_workloads/postgres/search_128d_100k_ip_allfilters.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/postgres/search_128d_100k_ip_allfilters.yaml
@@ -1,7 +1,7 @@
-# Vector Search - 128D, 100K vectors, L2 distance, All Filter Types
+# Vector Search - 128D, 100K vectors, Inner Product distance, All Filter Types
 # Following VectorDBBench naming conventions
-# Configuration: dimension=128, magnitude=100k, distance=l2, filters=all
-# Tests: nofilter, 1percentile, 99percentile
+# Configuration: dimension=128, magnitude=100k, distance=ip, filters=all
+# Tests: nofilter, low_filter_1p (1% filtered out), high_filter_99p (99% filtered out)
 
 type: POSTGRES
 driver: org.postgresql.Driver
@@ -29,7 +29,7 @@ microbenchmark:
             - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_search_128d_100k;
             - CREATE TABLE vector_search_128d_100k (id bigint PRIMARY KEY, embedding vector(128), metadata text, category int);
-            - CREATE INDEX ON vector_search_128d_100k USING hnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
+            - CREATE INDEX ON vector_search_128d_100k USING hnsw (embedding vector_ip_ops) WITH (m=16, ef_construction=200);
             - CREATE INDEX ON vector_search_128d_100k (category);
         cleanup:
             - DROP TABLE IF EXISTS vector_search_128d_100k;
@@ -52,13 +52,13 @@ microbenchmark:
 
         executeRules:
             # Test 1: No Filter - Pure ANN search
-            - workload: search_128d_100k_l2_nofilter
-              customTags: dim=128,magnitude=100k,distance=l2,filter=none,top_k=10,m=16,ef_construction=200
+            - workload: search_128d_100k_ip_nofilter
+              customTags: dim=128,magnitude=100k,distance=ip,filter=none,top_k=10,m=16,ef_construction=200
               run:
-                  - name: ann_search_l2_nofilter
+                  - name: ann_search_ip_nofilter
                     weight: 100
                     queries:
-                        - query: SELECT id, metadata, embedding <-> ?::vector(128) as distance FROM vector_search_128d_100k ORDER BY embedding <-> ?::vector(128) LIMIT 10
+                        - query: SELECT id, metadata, embedding <#> ?::vector(128) as neg_inner_product FROM vector_search_128d_100k ORDER BY embedding <#> ?::vector(128) LIMIT 10
                           count: 100
                           bindings:
                               - util: DeterministicVectorGen
@@ -66,36 +66,36 @@ microbenchmark:
                               - util: DeterministicVectorGen
                                 params: [128, -1.0, 1.0, 12345]
 
-            # Test 2: 1% Filter - Selective filtering (category 1-100, ~1% selectivity)
-            - workload: search_128d_100k_l2_1percentile
-              customTags: dim=128,magnitude=100k,distance=l2,filter=1percentile,top_k=10,m=16,ef_construction=200
+            # Test 2: Low Filter 1P - 1% of data filtered out (~99% eligible, easy search)
+            - workload: search_128d_100k_ip_low_filter_1p
+              customTags: dim=128,magnitude=100k,distance=ip,filter=low_1pct_out_1p,top_k=10,m=16,ef_construction=200
               run:
-                  - name: ann_search_l2_1pct_filter
+                  - name: ann_search_ip_low_filter_1p
                     weight: 100
                     queries:
-                        - query: SELECT id, metadata, embedding <-> ?::vector(128) as distance FROM vector_search_128d_100k WHERE category = ? ORDER BY embedding <-> ?::vector(128) LIMIT 10
-                          count: 100
-                          bindings:
-                              - util: DeterministicVectorGen
-                                params: [128, -1.0, 1.0, 12345]
-                              - util: RandomNumber
-                                params: [1, 100]
-                              - util: DeterministicVectorGen
-                                params: [128, -1.0, 1.0, 12345]
-
-            # Test 3: 99% Filter - Broad filtering (category 1-2, ~50% selectivity each = 99% combined)
-            - workload: search_128d_100k_l2_99percentile
-              customTags: dim=128,magnitude=100k,distance=l2,filter=99percentile,top_k=10,m=16,ef_construction=200
-              run:
-                  - name: ann_search_l2_99pct_filter
-                    weight: 100
-                    queries:
-                        - query: SELECT id, metadata, embedding <-> ?::vector(128) as distance FROM vector_search_128d_100k WHERE category <= ? ORDER BY embedding <-> ?::vector(128) LIMIT 10
+                        - query: SELECT id, metadata, embedding <#> ?::vector(128) as neg_inner_product FROM vector_search_128d_100k WHERE category <= ? ORDER BY embedding <#> ?::vector(128) LIMIT 10
                           count: 100
                           bindings:
                               - util: DeterministicVectorGen
                                 params: [128, -1.0, 1.0, 12345]
                               - util: SeededRandomNumber
                                 params: [95, 100, 99999]
+                              - util: DeterministicVectorGen
+                                params: [128, -1.0, 1.0, 12345]
+
+            # Test 3: High Filter 99P - 99% of data filtered out (~1% eligible, hard search)
+            - workload: search_128d_100k_ip_high_filter_99p
+              customTags: dim=128,magnitude=100k,distance=ip,filter=high_99pct_out_99p,top_k=10,m=16,ef_construction=200
+              run:
+                  - name: ann_search_ip_high_filter_99p
+                    weight: 100
+                    queries:
+                        - query: SELECT id, metadata, embedding <#> ?::vector(128) as neg_inner_product FROM vector_search_128d_100k WHERE category = ? ORDER BY embedding <#> ?::vector(128) LIMIT 10
+                          count: 100
+                          bindings:
+                              - util: DeterministicVectorGen
+                                params: [128, -1.0, 1.0, 12345]
+                              - util: RandomNumber
+                                params: [1, 100]
                               - util: DeterministicVectorGen
                                 params: [128, -1.0, 1.0, 12345]
