--- a/config/yugabyte/regression_pipelines/vector_workloads/yb_colocated/delete_1536d_single_indexed.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/yb_colocated/delete_1536d_single_indexed.yaml
@@ -28,7 +28,7 @@ microbenchmark:
             - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_delete_1536d_indexed;
             - CREATE TABLE vector_delete_1536d_indexed (id bigint PRIMARY KEY, embedding vector(1536));
-            - CREATE INDEX ON vector_delete_1536d_indexed USING ybhnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
+            - CREATE INDEX ON vector_delete_1536d_indexed USING ybhnsw (embedding vector_ip_ops) WITH (m=16, ef_construction=200);
         cleanup:
             - DROP TABLE IF EXISTS vector_delete_1536d_indexed;
         loadRules:
