--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/index_pre_and_backfilling_wide_tables/insert_index_backfill_wideTable.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/index_pre_and_backfilling_wide_tables/insert_index_backfill_wideTable.yaml
@@ -55,13 +55,10 @@ microbenchmark:
                     params: [4000, 5000]
 
         executeRules:
-            - workload: select_by_index
+            - workload: scan_table
               time_secs: 30
               run:
-                  - name: select_by_index
+                  - name: scan_full_table
                     weight: 100
                     queries:
-                        - query: SELECT * FROM wide_table WHERE int_col2 = ?
-                          bindings:
-                              - util: CyclicSeqIntGen
-                                params: [1, 1000000]
+                         query: SELECT * FROM wide_table;
