--- a/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/update_512d_embedding_indexed_m16_ef200.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/update_512d_embedding_indexed_m16_ef200.yaml
@@ -1,10 +1,10 @@
-# Vector Update - 512D, update embedding with HNSW index (Inner Product distance)
+# Vector Update - 512D, update embedding with HNSW index (L2 distance)
 # Following VectorDBBench naming conventions
-# Configuration: dimension=512, operation=update, column=embedding, indexed=true, m=16, ef_construction=200, distance=inner_product
+# Configuration: dimension=512, operation=update, column=embedding, indexed=true, m=16, ef_construction=200, distance=l2
 
-type: POSTGRES
-driver: org.postgresql.Driver
-url: jdbc:postgresql://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+type: YUGABYTE
+driver: com.yugabyte.Driver
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
@@ -26,13 +26,13 @@ microbenchmark:
         setAutoCommit: false
         create:
             - CREATE EXTENSION IF NOT EXISTS vector;
-            - DROP TABLE IF EXISTS vector_update_512d_ip_indexed;
-            - CREATE TABLE vector_update_512d_ip_indexed (id bigint PRIMARY KEY, embedding vector(512));
-            - CREATE INDEX ON vector_update_512d_ip_indexed USING hnsw (embedding vector_ip_ops) WITH (m=16, ef_construction=200);
+            - DROP TABLE IF EXISTS vector_update_512d_indexed;
+            - CREATE TABLE vector_update_512d_indexed (id bigint PRIMARY KEY, embedding vector(512));
+            - CREATE INDEX ON vector_update_512d_indexed USING ybhnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
         cleanup:
-            - DROP TABLE IF EXISTS vector_update_512d_ip_indexed;
+            - DROP TABLE IF EXISTS vector_update_512d_indexed;
         loadRules:
-            - table: vector_update_512d_ip_indexed
+            - table: vector_update_512d_indexed
               rows: 100000
               columns:
                   - name: id
@@ -43,14 +43,14 @@ microbenchmark:
                     params: [512, -1.0, 1.0, 42]
 
         executeRules:
-            - workload: update_512d_embedding_ip_indexed
-              customTags: dim=512,operation=update,column=embedding,indexed=true,m=16,ef_construction=200,distance=inner_product
+            - workload: update_512d_embedding_indexed_m16_ef200
+              customTags: dim=512,operation=update,column=embedding,indexed=true,m=16,ef_construction=200,distance=l2
               run:
                   - name: update_vector_with_index
                     weight: 100
                     queries:
-                        - query: UPDATE vector_update_512d_ip_indexed SET embedding = ?::vector(512) WHERE id = ?
-                          count: 10
+                        - query: UPDATE vector_update_512d_indexed SET embedding = ?::vector(512) WHERE id = ?
+                          count: 1
                           bindings:
                               - util: DeterministicVectorGen
                                 params: [512, -1.0, 1.0, 43]
