--- a/config/yugabyte/regression_pipelines/vector_workloads/postgres/delete_1536d_single_indexed.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/postgres/delete_1536d_single_indexed.yaml
@@ -2,9 +2,10 @@
 # Following VectorDBBench naming conventions
 # Configuration: dimension=1536, operation=delete, deletetype=single, indexed=true
 
+
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
@@ -12,45 +13,44 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
 terminals: 1
 collect_pg_stat_statements: true
-use_dist_in_explain: true
 yaml_version: v1.0
 works:
-    work:
-        time_secs: 120
-        active_terminals: 1
-        rate: unlimited
-        warmup: 30
+  work:
+      time_secs: 120
+      active_terminals: 1
+      rate: unlimited
+      warmup: 30
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
-    properties:
-        setAutoCommit: false
-        create:
-            - CREATE EXTENSION IF NOT EXISTS vector;
-            - DROP TABLE IF EXISTS vector_delete_1536d_indexed;
-            - CREATE TABLE vector_delete_1536d_indexed (id bigint PRIMARY KEY, embedding vector(1536));
-            - CREATE INDEX ON vector_delete_1536d_indexed USING hnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
-        cleanup:
-            - DROP TABLE IF EXISTS vector_delete_1536d_indexed;
-        loadRules:
-            - table: vector_delete_1536d_indexed
-              rows: 200000
-              columns:
-                  - name: id
-                    util: PrimaryIntGen
-                    params: [1, 200000]
-                  - name: embedding
-                    util: DeterministicVectorGen
-                    params: [1536, -1.0, 1.0, 42]
-
-        executeRules:
-            - workload: delete_1536d_single_indexed
-              customTags: dim=1536,operation=delete,deletetype=single,indexed=true
-              run:
-                  - name: delete_single_row
-                    weight: 100
-                    queries:
-                        - query: DELETE FROM vector_delete_1536d_indexed WHERE id = ?
-                          count: 10
-                          bindings:
-                              - util: RandomNumber
-                                params: [1, 200000]
+  class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
+  properties:
+    setAutoCommit: false
+    create:
+      - CREATE EXTENSION IF NOT EXISTS vector;
+      - DROP TABLE IF EXISTS vector_delete_1536d_indexed;
+      - CREATE TABLE vector_delete_1536d_indexed (id bigint PRIMARY KEY, embedding vector(1536));
+      - CREATE INDEX ON vector_delete_1536d_indexed USING hnsw (embedding vector_ip_ops)
+        WITH (m=16, ef_construction=200);
+    cleanup:
+      - DROP TABLE IF EXISTS vector_delete_1536d_indexed;
+    loadRules:
+      - table: vector_delete_1536d_indexed
+        rows: 200000
+        columns:
+          - name: id
+            util: PrimaryIntGen
+            params: [1, 200000]
+          - name: embedding
+            util: DeterministicVectorGen
+            params: [1536, -1.0, 1.0, 42]
+    executeRules:
+      - workload: delete_1536d_single_indexed
+        customTags: dim=1536,operation=delete,deletetype=single,indexed=true
+        run:
+        - name: delete_single_row
+          weight: 100
+          queries:
+            - query: DELETE FROM vector_delete_1536d_indexed WHERE id = ?
+              count: 1
+              bindings:
+              - util: RandomNumber
+                params: [1, 200000]
