--- a/config/yugabyte/regression_pipelines/vector_workloads/postgres/insert_512d_indexed_m16_ef200.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/postgres/insert_512d_indexed_m16_ef200.yaml
@@ -4,7 +4,7 @@
 
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
@@ -12,7 +12,6 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
 terminals: 1
 collect_pg_stat_statements: true
-use_dist_in_explain: true
 yaml_version: v1.0
 works:
     work:
@@ -50,7 +49,7 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: INSERT INTO vector_insert_512d_indexed (id, embedding) VALUES (?, ?::vector(512))
-                          count: 10
+                          count: 1
                           bindings:
                               - util: PrimaryIntGen
                                 params: [50001, 500000]
