--- a/config/yugabyte/regression_pipelines/vector_workloads/postgres/update_1536d_embedding_indexed_m16_ef200.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/postgres/update_1536d_embedding_indexed_m16_ef200.yaml
@@ -1,10 +1,10 @@
-# Vector Update - 1536D, update embedding with HNSW index (L2 distance)
+# Vector Update - 1536D, update embedding with HNSW index (Inner Product distance)
 # Following VectorDBBench naming conventions
-# Configuration: dimension=1536, operation=update, column=embedding, indexed=true, m=16, ef_construction=200, distance=l2
+# Configuration: dimension=1536, operation=update, column=embedding, indexed=true, m=16, ef_construction=200, distance=ip
 
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
@@ -12,7 +12,6 @@ isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
 terminals: 1
 collect_pg_stat_statements: true
-use_dist_in_explain: true
 yaml_version: v1.0
 works:
     work:
@@ -28,7 +27,7 @@ microbenchmark:
             - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_update_1536d_indexed;
             - CREATE TABLE vector_update_1536d_indexed (id bigint PRIMARY KEY, embedding vector(1536));
-            - CREATE INDEX ON vector_update_1536d_indexed USING hnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
+            - CREATE INDEX ON vector_update_1536d_indexed USING hnsw (embedding vector_ip_ops) WITH (m=16, ef_construction=200);
         cleanup:
             - DROP TABLE IF EXISTS vector_update_1536d_indexed;
         loadRules:
@@ -44,13 +43,13 @@ microbenchmark:
 
         executeRules:
             - workload: update_1536d_embedding_indexed_m16_ef200
-              customTags: dim=1536,operation=update,column=embedding,indexed=true,m=16,ef_construction=200,distance=l2
+              customTags: dim=1536,operation=update,column=embedding,indexed=true,m=16,ef_construction=200,distance=ip
               run:
                   - name: update_vector_with_index
                     weight: 100
                     queries:
                         - query: UPDATE vector_update_1536d_indexed SET embedding = ?::vector(1536) WHERE id = ?
-                          count: 10
+                          count: 1
                           bindings:
                               - util: DeterministicVectorGen
                                 params: [1536, -1.0, 1.0, 43]
