--- a/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/search_128d_100k_ip_allfilters.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/search_128d_100k_ip_allfilters.yaml
@@ -1,6 +1,6 @@
-# Vector Search - 512D, 100K vectors, L2 distance, All Filter Types
+# Vector Search - 128D, 100K vectors, Inner Product distance, All Filter Types
 # Following VectorDBBench naming conventions
-# Configuration: dimension=512, magnitude=100k, distance=l2, filters=all
+# Configuration: dimension=128, magnitude=100k, distance=ip, filters=all
 # Tests: nofilter, low_filter_1p (1% filtered out), high_filter_99p (99% filtered out)
 
 type: YUGABYTE
@@ -27,14 +27,14 @@ microbenchmark:
         setAutoCommit: true
         create:
             - CREATE EXTENSION IF NOT EXISTS vector;
-            - DROP TABLE IF EXISTS vector_search_512d_100k;
-            - CREATE TABLE vector_search_512d_100k (id bigint PRIMARY KEY, embedding vector(512), metadata text, category int);
-            - CREATE INDEX ON vector_search_512d_100k USING ybhnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
-            - CREATE INDEX ON vector_search_512d_100k (category);
+            - DROP TABLE IF EXISTS vector_search_128d_100k;
+            - CREATE TABLE vector_search_128d_100k (id bigint PRIMARY KEY, embedding vector(128), metadata text, category int);
+            - CREATE INDEX ON vector_search_128d_100k USING ybhnsw (embedding vector_ip_ops) WITH (m=16, ef_construction=200);
+            - CREATE INDEX ON vector_search_128d_100k (category);
         cleanup:
-            - DROP TABLE IF EXISTS vector_search_512d_100k;
+            - DROP TABLE IF EXISTS vector_search_128d_100k;
         loadRules:
-            - table: vector_search_512d_100k
+            - table: vector_search_128d_100k
               rows: 100000
               columns:
                   - name: id
@@ -42,7 +42,7 @@ microbenchmark:
                     params: [1, 100000]
                   - name: embedding
                     util: RandomFloatArrayGen
-                    params: [512, -1.0, 1.0]
+                    params: [128, -1.0, 1.0]
                   - name: metadata
                     util: RandomAString
                     params: [50, 100]
@@ -52,50 +52,50 @@ microbenchmark:
 
         executeRules:
             # Test 1: No Filter - Pure ANN search
-            - workload: search_512d_100k_l2_nofilter
-              customTags: dim=512,magnitude=100k,distance=l2,filter=none,top_k=10,m=16,ef_construction=200
+            - workload: search_128d_100k_ip_nofilter
+              customTags: dim=128,magnitude=100k,distance=ip,filter=none,top_k=10,m=16,ef_construction=200
               run:
-                  - name: ann_search_l2_nofilter
+                  - name: ann_search_ip_nofilter
                     weight: 100
                     queries:
-                        - query: SELECT id, metadata, embedding <-> ?::vector(512) as distance FROM vector_search_512d_100k ORDER BY embedding <-> ?::vector(512) LIMIT 10
+                        - query: SELECT id, metadata, embedding <#> ?::vector(128) as neg_inner_product FROM vector_search_128d_100k ORDER BY embedding <#> ?::vector(128) LIMIT 10
                           count: 1
                           bindings:
                               - util: DeterministicVectorGen
-                                params: [512, -1.0, 1.0, 54321]
+                                params: [128, -1.0, 1.0, 12345]
                               - util: DeterministicVectorGen
-                                params: [512, -1.0, 1.0, 54321]
+                                params: [128, -1.0, 1.0, 12345]
 
             # Test 2: Low Filter 1P - 1% of data filtered out (~99% eligible, easy search)
-            - workload: search_512d_100k_l2_low_filter_1p
-              customTags: dim=512,magnitude=100k,distance=l2,filter=low_1pct_out_1p,top_k=10,m=16,ef_construction=200
+            - workload: search_128d_100k_ip_low_filter_1p
+              customTags: dim=128,magnitude=100k,distance=ip,filter=low_1pct_out_1p,top_k=10,m=16,ef_construction=200
               run:
-                  - name: ann_search_l2_low_filter_1p
+                  - name: ann_search_ip_low_filter_1p
                     weight: 100
                     queries:
-                        - query: SELECT id, metadata, embedding <-> ?::vector(512) as distance FROM vector_search_512d_100k WHERE category <= ? ORDER BY embedding <-> ?::vector(512) LIMIT 10
+                        - query: SELECT id, metadata, embedding <#> ?::vector(128) as neg_inner_product FROM vector_search_128d_100k WHERE category <= ? ORDER BY embedding <#> ?::vector(128) LIMIT 10
                           count: 1
                           bindings:
                               - util: DeterministicVectorGen
-                                params: [512, -1.0, 1.0, 54321]
+                                params: [128, -1.0, 1.0, 12345]
                               - util: SeededRandomNumber
                                 params: [95, 100, 99999]
                               - util: DeterministicVectorGen
-                                params: [512, -1.0, 1.0, 54321]
+                                params: [128, -1.0, 1.0, 12345]
 
             # Test 3: High Filter 99P - 99% of data filtered out (~1% eligible, hard search)
-            - workload: search_512d_100k_l2_high_filter_99p
-              customTags: dim=512,magnitude=100k,distance=l2,filter=high_99pct_out_99p,top_k=10,m=16,ef_construction=200
+            - workload: search_128d_100k_ip_high_filter_99p
+              customTags: dim=128,magnitude=100k,distance=ip,filter=high_99pct_out_99p,top_k=10,m=16,ef_construction=200
               run:
-                  - name: ann_search_l2_high_filter_99p
+                  - name: ann_search_ip_high_filter_99p
                     weight: 100
                     queries:
-                        - query: SELECT id, metadata, embedding <-> ?::vector(512) as distance FROM vector_search_512d_100k WHERE category = ? ORDER BY embedding <-> ?::vector(512) LIMIT 10
+                        - query: SELECT id, metadata, embedding <#> ?::vector(128) as neg_inner_product FROM vector_search_128d_100k WHERE category = ? ORDER BY embedding <#> ?::vector(128) LIMIT 10
                           count: 1
                           bindings:
                               - util: DeterministicVectorGen
-                                params: [512, -1.0, 1.0, 54321]
+                                params: [128, -1.0, 1.0, 12345]
                               - util: RandomNumber
                                 params: [1, 100]
                               - util: DeterministicVectorGen
-                                params: [512, -1.0, 1.0, 54321]
+                                params: [128, -1.0, 1.0, 12345]
