--- a/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/search_1536d_50k_cosine_nofilter.yaml
+++ b/config/yugabyte/regression_pipelines/vector_workloads/yugabyte/search_1536d_50k_cosine_nofilter.yaml
@@ -1,6 +1,6 @@
-# Vector Search - 1536D, 50K vectors, L2 distance, No Filter (OpenAI embeddings)
+# Vector Search - 1536D, 50K vectors, Cosine distance, No Filter (OpenAI embeddings)
 # Following VectorDBBench naming conventions
-# Configuration: dimension=1536, magnitude=50k, filter=none, distance=l2, ef_construction=200, m=16
+# Configuration: dimension=1536, magnitude=50k, filter=none, distance=cosine, ef_construction=200, m=16
 
 type: YUGABYTE
 driver: com.yugabyte.Driver
@@ -28,7 +28,7 @@ microbenchmark:
             - CREATE EXTENSION IF NOT EXISTS vector;
             - DROP TABLE IF EXISTS vector_search_1536d_50k;
             - CREATE TABLE vector_search_1536d_50k (id bigint PRIMARY KEY, embedding vector(1536), metadata text, category int);
-            - CREATE INDEX ON vector_search_1536d_50k USING ybhnsw (embedding vector_l2_ops) WITH (m=16, ef_construction=200);
+            - CREATE INDEX ON vector_search_1536d_50k USING ybhnsw (embedding vector_cosine_ops) WITH (m=16, ef_construction=200);
         cleanup:
             - DROP TABLE IF EXISTS vector_search_1536d_50k;
         loadRules:
@@ -49,14 +49,14 @@ microbenchmark:
                     params: [1, 10]
 
         executeRules:
-            - workload: search_1536d_50k_l2_nofilter
-              customTags: dim=1536,magnitude=50k,distance=l2,filter=none,top_k=10,m=16,ef_construction=200
+            - workload: search_1536d_50k_cosine_nofilter
+              customTags: dim=1536,magnitude=50k,distance=cosine,filter=none,top_k=10,m=16,ef_construction=200
               run:
-                  - name: ann_search_l2
+                  - name: ann_search_cosine
                     weight: 100
                     queries:
-                        - query: SELECT id, metadata, embedding <-> ?::vector(1536) as distance FROM vector_search_1536d_50k ORDER BY embedding <-> ?::vector(1536) LIMIT 10
-                          count: 100
+                        - query: SELECT id, metadata, 1 - (embedding <=> ?::vector(1536)) as similarity FROM vector_search_1536d_50k ORDER BY embedding <=> ?::vector(1536) LIMIT 10
+                          count: 1
                           bindings:
                               - util: DeterministicVectorGen
                                 params: [1536, -1.0, 1.0, 99999]
