- minor changes to file

--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/index_pre_and_backfilling_wide_tables/insert_index_backfill_wideTable.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/index_pre_and_backfilling_wide_tables/insert_index_backfill_wideTable.yaml
@@ -54,7 +54,7 @@ microbenchmark:
                     util: RandomAString
                     params: [5000, 5000]
 
-        executeRules:
+        executeOnce:
             - workload: scan_table
               time_secs: 30
               run:
