--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/index_pre_and_backfilling_wide_tables/insert_index_backfill_wideTable.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/index_pre_and_backfilling_wide_tables/insert_index_backfill_wideTable.yaml
@@ -33,7 +33,7 @@ microbenchmark:
                 text_col7 TEXT,
                 text_col8 TEXT,
                 text_col9 TEXT,
-                text_col10 TEXT,
+                text_col10 TEXT
                 );
 
         loadRules:
